<resources>
    <string name="app_name">DigiAdmin</string>
    <string name="login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="logged_in_message">Logged In Successfully</string>
    <string name="email_id">Email ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="signup">Signup</string>
    <string name="screen_name">Screen Name</string>
    <string name="no">NO</string>
    <string name="submit">Submit</string>
    <string name="state">State</string>
    <string name="dl_number">DL Number</string>
    <string name="fullname">Fullname</string>
    <string name="s_d_w_h_of">S/D/W/H Of</string>
    <string name="dob">Date Of Birth</string>
    <string name="age">Age</string>
    <string name="date_of_issue">Date Of Issue</string>
    <string name="valid_till">Valid Till</string>
    <string name="blood_group">Blood Group</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="current_address">Current Address</string>
    <string name="enter_license_type">Enter License Type</string>
    <string name="types_of_licenses">Types Of Licenses</string>
    <string name="fullform_mcwg">Motor Cycle With Gear</string>
    <string name="fullform_mgv">Medium Goods Vehicle</string>
    <string name="fullform_lmv">Light Motor Vehicle</string>
    <string name="fullform_hmv">Heavy Motor Vehicle</string>
    <string name="fullform_hgmv">Heavy Goods Motor Vehicle</string>
    <string name="fullform_hpmv">Heavy Passenger Motor Vehicle</string>
    <string name="remove_user">Remove User</string>
    <string name="note_if_you_remove_user_there_is_now_way_to_recover_user_data_back">NOTE: If You Remove User There is now way to Recover User Data Back</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="view_report">View Report</string>
    <string name="vehicle_category">Category</string>
    <string name="vehicle_registration_number">Registration Number</string>
    <string name="vehicle_brand">Veichle Brand</string>
    <string name="veichle_registration_number">Veichle Registration Number</string>
    <string name="veichle_id">Veichle ID</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="add_police">Add Police</string>
</resources>