<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/appbar_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/activity_appbar_loggedout"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/div_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">



            <EditText
                android:id="@+id/login_username"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:width="300dp"
                android:background="@drawable/login_edittext_border"
                android:hint="@string/login_username"
                android:gravity="center"
                android:textColor="@color/violetdark"
                android:textColorHint="@color/violetlight"
                android:inputType="text"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:width="300dp"
                android:background="@drawable/login_edittext_border"
                android:layout_below="@id/login_username"
                android:layout_marginTop="30dp"
                android:hint="@string/login_password"
                android:gravity="center"
                android:textColor="@color/violetdark"
                android:textColorHint="@color/violetlight"
                android:inputType="textPassword"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:layout_below="@+id/login_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_btn"
                android:shadowColor="@color/violetdark"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                />





        </RelativeLayout>






    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>